app/assets/css/desktop.less
@import "common";

@font-default: arial, helvetica, sans-serif;
@font-family: 'lato', @font-default;

@primary: #29b3d2;
@color: #7f7f7f;
@border-color: #e6e6e6;
@background-color: #fafafa;
@danger: #f46060;
@border-radius: 4px;

@width: 317px;
@padding: 20px;

@font-size: 14px;
// input elements horizontal padding
@input-padding: 14px;
@input-height: 40px;
@icon-size: 30px; // input fields icons

u{
  text-decoration: none;
}
i{
  font-style: normal;
  display: none;
}
.clear{
  .clearfix();
}
#nb-na {
  text-align: center;
  div{
    color: @danger;
  }
  a{
    cursor: pointer;
    border-bottom: 1px solid @primary;
    font-size: 12px;
    color: @primary;
    position: relative;
    top: 6px;
  }
}

body, html{
  margin: 0;
  height: 100%;
}

.backdrop{
  .background(rgba(0,0,0,0.6));
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

#container{
  height: 100%;
  outline: none;
  text-align: center;
  .transition(0.25s ease-out opacity);
  z-index: 19999;
  .middlefix();

  &.shown{
    opacity: 1;
    #powered-by{
      opacity: 1;
    }
    .modal{
      opacity: 1;
      .scale(1);
      .transition-transform(0.25s cubic-bezier(0.3, 1.5, 0.7, 1));
    }
  }
}
.font-loaded{
  .modal, button, input, select, textarea {
    font-family: @font-family;
  }
  #powered-by{
    visibility: visible;
    opacity: 1;
  }
  i{
    display: inline-block;
  }
  u{
    display: none;
  }
}
label{
  vertical-align: middle;
}
button, input, select, textarea{
  border: none;
  background: none;
  font-family: @font-default;
  outline: none;
}
input, select, textarea{
  border-radius: inherit;
  display: inline-block;
  color: inherit;
  font-size: 14px;
  resize: none;
  width: 100%;
  background: none;
  position: relative;
}
input, textarea, .placeholder{
  height: @input-height;
  line-height: @input-height;
  padding: 0 @input-padding;
  .box-sizing(border-box);
}
select{
  .appearance(none);
  .box-sizing(content-box);
  padding: 8px 0 8px @input-padding;
  height: 24px;
  line-height: 24px;
}
input[disabled]{
  background: #f4f4f4;
}
input[type=checkbox]{
  width: auto;
  vertical-align: middle;
}
input[type=radio]{
  width: auto;
  margin: 0 5px 0 0;
  vertical-align: middle;
}
button{
  padding: 0;
  margin: 0;
  border-radius: 0 0 @border-radius @border-radius;
  background: @primary no-repeat 12px center;
  line-height: 50px;
  color: #fff;
  font-size: 16px;
  box-shadow: 0 0 2px rgba(0,0,0,0.4) inset;
  width: 100%;
  cursor: pointer;
  &[disabled]{
    background-image: url('../images/loaders/2.gif');
    background-size: 16px;
    opacity: 0.7;
  }
}
.modal{
  outline: none;
  position: relative;
  vertical-align: middle;
  display: inline-block;
  white-space: normal;
  margin: 20px 0;
  opacity: 0;
  .transform(scale(0.9));
  &.animate{
    .transition(0.25s ease-in)!important;
  }

  color: @color;
  font-size: @font-size;
  width: @width;
  border-radius: @border-radius;
  background: @background-color;
  font-family: @font-default;
  box-shadow: 0 0 6px 0px rgba(0,0,0, 0.15);
  min-height: 377px;

  // ie7 and below, middlefix doesn't work.
  // NOTE: it isn't because of lack of :after, but buggy white-space support
  *top: 10%;
}
.modal-inner{
  .transition(0.15s ease-out opacity);
}
.elem{
  height: @input-height;
  line-height: @input-height;
  border: 1px solid @border-color;
  background: #fff;
  position: relative;
  margin: -1px 0 0;
  cursor: text;
  .transition(0.25s border-color);
  background: #fff center right no-repeat;

  i{
    position: absolute;
    right: @input-padding;
    z-index: 2;
    line-height: 34px;
    top: 0;
    font-size: @icon-size;
    color: #999;
  }
  &.focused{
    border-color: @primary;
    color: black;
    z-index: 2!important;
  }
  &.mature.invalid{
    color: @danger;
    border-color: @danger;
    z-index: 1;
    &.focused{
      border-color: @danger;
    }
  }
  &.filled, &.focused{
    .placeholder{
      display: none;
    }
  }
}
.placeholder{
  position: absolute;
  top: 0;
  left: 0;
  color: #999;
}
.double{
  white-space: nowrap;
  font-size: 0;
  .elem{
    font-size: @font-size;
    display: inline-block;
    width: (@width - 3px)/2 - @padding;
    *float: left;
  }
}
.elem-cvv{
  left: -1px;
  .help-text{
    left: auto;
    right: -15px;
    &:after{
      left: 50%;
    }
  }
}
#card_cvv{
  -webkit-text-security: disc;
}
// ie9, 10
@media screen and (~"min-width:0\0") {
  .help-text{
    display: none;
  }
  .focused.invalid.mature .help-text{
    display: block;
  }
}
.help-text{
  display: none\9; // <ie9
  color: #fff;
  pointer-events: none;
  position: absolute;
  max-width: 225px;
  line-height: 16px;
  padding: 6px 10px;
  font-size: 80%;
  text-align: center;
  background: #333;
  border-radius: @border-radius;
  box-shadow: rgba(0, 0, 0, 0.05) 1px 1px 2px 0px;
  opacity: 0;
  .transform(translateY(10px));
  .transition-transform(~"0.25s ease-in, 0.16s ease-in opacity");
  bottom: 100%;
  left: 10px;
  margin-bottom: -3px;
  &:after {
    content: '';
    position: absolute;
    width: 0;
    height: 0;
    border-width: 6px;
    border-style: solid;
    border-color: #333 transparent transparent transparent;
    bottom: 0;
    left: 20px;
    margin: 0 0 -11px -7px;
  }
}
.focused.invalid.mature .help-text{
  display: block; // helps when pointer-events is not supported
  opacity: 0.85;
  .transform(none);
  .transition-transform(~"0.2s cubic-bezier(0.6, 1.6, 0.8, 1), 0.2s ease-out opacity");
}
.fieldset{
  padding: 20px 0;
  clear: both;
}
.merchant{
  border-radius: @border-radius @border-radius 0 0;
  background: #fff;
  position: relative;
  padding: 10px;
  height: 40px;
  .middlefix();
}
/* Default class for an overlay */
.header{
  border-bottom: 2px solid @primary;
}
.merchant-image{
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  padding-left: 10px;
  .middlefix();
}
.merchant-image img{
  max-width: 60px;
  max-height: 40px;
  vertical-align: middle;
  display: inline-block;
}
.merchant-name{
  vertical-align: middle;
  display: inline-block;
}
.merchant-title{
  color: #333;
  margin-bottom: 5px;
}
#modal-close{
  position: absolute;
  right: 0;
  top: 0;
  width: 30px;
  font-size: 20px;
  color: #999;
  line-height: 36px;
  cursor: pointer;
  &:hover{
    color: #333;
  }
}
.rupee-icon:before{
  content: "\e600";
}
.clear{
  clear:both;
}
.body{
  text-align: left;
  padding: 0 @padding;
}
.nocvv{
  opacity: 0;
  color: #666;
  margin-top: 10px;
  line-height: 20px;
  .transition(0.3s);  
  display: none\9; // ie8
  display: none;
}
#elem-card{
  .transition(0.3s);
  i{
    font-size: 0;
    width: 24px;
    background: no-repeat center;
    background-size: 24px;
    text-align: center;
  }
  &[cardtype=unknown] i{
    font-size: @icon-size;
  }
  &[cardtype=visa] i{
    background-image: url('../images/icons/visa.png');
  }
  &[cardtype=mastercard] i{
    background-image: url('../images/icons/mastercard.png');
  }
  &[cardtype=maestro]{
    // margin-bottom: 40px;
    i{
      background-image: url('../images/icons/maestro.png');
    }
    .nocvv{
      opacity: 1;
      // display: block\9;
    }
  }
  &[cardtype=maestro16] i{
    background-image: url('../images/icons/maestro.png');
  }
  &[cardtype=rupay] i{
    background-image: url('../images/icons/rupay.png');
  }
  &[cardtype=amex] i{
    background-image: url('../images/icons/amex.png');
  }
}

#submitbtn.error{
  background-color: @danger;
}
#error-message{
  left: 0;
  right: 0;
  position: absolute;
  background-color: @danger;
  color: #fff;
  text-align: center;
  line-height: 18px;
  padding: 10px 20px 12px;
  overflow: hidden;
  .transition(0.3s);
  bottom: 100%;
}
#error-container{
  position: relative;
  overflow: hidden;
  display: none;
  margin: 0 -@padding;
  .transition(0.3s);
  &.has-error{
    #error-message{
      bottom: 0;
    }
  }
}
.tab-content{
  display: none;
}
.tab-content.active{
  display: block;
}

#tabs{  
  margin: 0 -20px;
  padding: 0;
  font-size: 0;
  white-space: nowrap;
  display: none;
  *margin-bottom: -20px; // ie7

  &.tabs-2{
    display: block;
  }

  &.tabs-3{
    display: block;
    li{
      width: (@width - 2)/3;
    }
  }

  li{
    list-style: none;
    line-height: 48px;
    height: 48px;
    text-align: center;
    border: 1px solid @border-color;
    border-right: none;
    width: 50%;
    font-size: @font-size;
    cursor: pointer;
    background: #fff;
    padding-bottom: 2px;
    display: inline-block;
    vertical-align: top;
    
    &.active{
      color: @primary;
      cursor: default;
      pointer-events: none;
      padding-bottom: 1px;
      border-bottom: 2px solid @primary;
    }
    &:first-child{
      border-left: none;
    }
  }
}
#paytm-wrapper{
  width: 40px;
  display: inline-block;
  margin-top: 18px;
  height: 12px;
  overflow: hidden;
  position: relative;
  img{
    vertical-align: top;
  }
  .colored{
    display: none;
    position: absolute;
    bottom: 0;
    left: 0;
  }
  div{
    font-size: 14px;
    line-height: 14px;
  }
}
li{
  &:hover, &.active{
    #paytm-wrapper .colored{
      display: block;
    }
  }
}
#form{
  margin: 0;
  padding-bottom: 52px;
  display: block;
}
.footer{
  bottom: 0;
  z-index: 2;
  width: 100%;
  position: absolute;
  margin: 0 -@padding;
}
#powered-by{
  left: 0;
  visibility: hidden;
  opacity: 0;
  width: 100%;
  bottom: -60px;
  display: block;
  font-size: 36px;
  .transition(0.3s);
  position: absolute;
  .transition-delay(0.2s);
  font-family: @font-family;
  text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
  
  a{
    color: #999;
    outline: none;
    line-height: 36px;
    .transition(0.3s);
    text-decoration: none;
    &:hover{
      color: #ddd;
    }
  }
}

